// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea forwards extra props 1`] = `
<TextareaAutosize
  className="component"
  onChange={[Function]}
  onHeightChange={[Function]}
  placeholder="Placeholder text"
  useCacheForDOMMeasurements={false}
/>
`;

exports[`TextArea renders correctly 1`] = `
<TextareaAutosize
  className="component"
  onChange={[Function]}
  onHeightChange={[Function]}
  useCacheForDOMMeasurements={false}
/>
`;

exports[`TextArea renders with text 1`] = `
<TextareaAutosize
  className="component"
  onChange={[Function]}
  onHeightChange={[Function]}
  useCacheForDOMMeasurements={false}
/>
`;

exports[`TextArea works without onChange  1`] = `
<TextareaAutosize
  className="component"
  onChange={[Function]}
  onHeightChange={[Function]}
  text="Test text"
  useCacheForDOMMeasurements={false}
/>
`;
